# loc-utils

./: CMakeLists.txt  oss-pkg-info.yaml
files/conf/pmlog/: location.conf.in
files/pkgconfig/: loc-utils.pc.in
include/: loc_curl.h  loc_filter.h  loc_geometry.h  loc_http.h  loc_log.h  loc_logger.h  loc_security.h
src/: CMakeLists.txt  loc_curl.c  loc_filter.c  loc_geometry.c  loc_http.c  loc_logger.c  loc_security.c
